--- a/AmbChat/app/src/main/res/layout/activity_main.xml
+++ b/AmbChat/app/src/main/res/layout/activity_main.xml
@@ -13,12 +13,12 @@
 
     <ImageView
         android:id="@+id/imgGiaoDien"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:paddingTop="16dp"
         android:scaleType="center"
-        app:srcCompat="@drawable/usernam" />
+        app:srcCompat="@mipmap/ic_launcher" />
 
     <RelativeLayout
         android:layout_width="match_parent"
