--- a/AmbChat/app/src/main/res/layout/activity_home.xml
+++ b/AmbChat/app/src/main/res/layout/activity_home.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
+    android:layout_marginTop="5dp"
     android:layout_height="match_parent">
 
     <LinearLayout
@@ -10,19 +11,20 @@
         android:layout_weight="1"
         android:orientation="horizontal"
         >
+
         <ImageView
             android:id="@+id/imgIconSearch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:layout_weight="1"
-            android:src="@drawable/baseline_search_black_18dp"
-            android:layout_gravity="center"/>
+            android:src="@drawable/baseline_search_black_18dp" />
 
         <EditText
             android:id="@+id/edtSearch"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="3"
+            android:layout_weight="2"
             android:hint="Search friend" />
         <Button
             android:id="@+id/btnSearch"
@@ -43,54 +45,12 @@
         android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         android:layout_weight="8">
-        <LinearLayout
+
+        <ListView
+            android:id="@+id/lvListFriends"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ec90d7"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/imgAvatarListMess"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:scaleType="center"
-                android:layout_gravity="center"
-                android:src="@drawable/baseline_person_white_36" />
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_weight="3"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-                <TextView
-                    android:id="@+id/txtListMess"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="Tên Người Chat"
-                    android:textSize="24sp"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:textColor="@android:color/white"/>
-                <TextView
-                    android:id="@+id/txtMessLast"
-                    android:layout_width="wrap_content"
-                    android:layout_height="0dp"
-                    android:layout_gravity="left"
-                    android:layout_marginLeft="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_weight="1"
-                    android:gravity="left"
-                    android:text="tin nhắn cuối"
-                    android:textColor="@android:color/black"
-                    android:textSize="24sp" />
-            </LinearLayout>
-
-        </LinearLayout>
-
+            android:layout_height="match_parent">
+        </ListView>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -98,11 +58,18 @@
         android:layout_weight="1"
         android:orientation="horizontal">
         <ImageView
+            android:id="@+id/imgAcount"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:src="@drawable/ic_account"
+            android:layout_height="35dp" />
+        <ImageView
             android:id="@+id/imgListFriend"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="wrap_content"
             android:src="@drawable/baseline_supervisor_account_black_18dp"/>
+
         <ImageView
             android:id="@+id/imgListMess"
             android:layout_width="0dp"
@@ -110,7 +77,5 @@
             android:src="@drawable/baseline_message_black_18dp"
             android:layout_height="wrap_content" />
 
-
     </LinearLayout>
-
 </LinearLayout>
