--- a/AmbChat/app/src/main/res/layout/activity_main.xml
+++ b/AmbChat/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,26 @@
     android:paddingLeft="24dp"
     android:paddingRight="24dp"
     tools:context=".MainActivity">
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:text="Wellcom To Abm Chat"
+        android:textSize="30px"
+        android:textStyle="bold"
+        android:gravity="center"
+        android:layout_marginTop="5dp"
+        android:layout_weight="0.7"
+        android:textColor="@color/colorPrimary"/>
 
     <ImageView
         android:id="@+id/imgGiaoDien"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:paddingTop="16dp"
+        android:paddingTop="5dp"
         android:scaleType="center"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:src="@drawable/iconapp3" />
+
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -42,9 +52,8 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
                 android:layout_marginTop="16dp"
-                android:background="@color/colorPrimary"
+                android:background="@drawable/custom"
                 android:textColor="@android:color/white"
-
                 android:textSize="30sp"
                 android:text="Đăng Nhập"/>
 
@@ -57,13 +66,10 @@
                 android:layout_marginLeft="32dp"
                 android:layout_marginRight="32dp"
                 android:layout_marginTop="16dp"
-                android:background="@android:color/white"
+                android:background="@drawable/custom"
                 android:text="Đăng ký"
-                android:textColor="@android:color/black"
+                android:textColor="@android:color/white"
                 android:textSize="30sp" />
         </LinearLayout>
-
-
     </RelativeLayout>
-
 </LinearLayout>
