--- a/AmbChat/app/src/main/res/layout/signin.xml
+++ b/AmbChat/app/src/main/res/layout/signin.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical"
+
+    >
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
         android:orientation="vertical"
-        android:paddingBottom="70dp"
-        android:paddingLeft="70dp"
-        android:paddingRight="70dp"
-        android:paddingTop="70dp">
+        android:paddingBottom="50dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="50dp">
 
         <ImageView
             android:id="@+id/imgSignIn"
@@ -26,7 +28,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_weight="1"
             android:background="#FFFFFF"
             android:orientation="horizontal">
@@ -37,7 +39,7 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="2"
                 android:scaleType="centerCrop"
-                android:src="@drawable/baseline_person_white_48" />
+                android:src="@drawable/iconuser" />
 
             <EditText
                 android:id="@+id/edtUserName"
@@ -46,7 +48,8 @@
                 android:layout_weight="9"
                 android:hint="User name"
                 android:textSize="15sp"
-                android:padding="5dp"
+                android:padding="7dp"
+                android:textColor="#000"
                 />
         </LinearLayout>
 
@@ -54,7 +57,7 @@
             android:id="@+id/id_pass"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:orientation="horizontal">
 
@@ -64,18 +67,19 @@
                 android:layout_height="fill_parent"
                 android:layout_weight="2"
                 android:scaleType="centerCrop"
-                android:src="@drawable/outline_lock_white_48" />
+                android:src="@drawable/iconlock" />
 
             <EditText
                 android:id="@+id/edtPass"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="9"
-                android:background="#FFFFFF"
                 android:hint="Password"
-                android:padding="5dp"
+                android:textSize="15sp"
+                android:padding="7dp"
+                android:textColor="#000"
                 android:password="true"
-                android:textSize="15sp" />
+                />
         </LinearLayout>
 
         <TextView
@@ -87,7 +91,7 @@
             android:text="Forgot Password"
             android:textAllCaps="false"
             android:textColor="@android:color/black"
-            android:textSize="15sp"
+            android:textSize="18sp"
             android:textStyle="italic" />
 
 
@@ -104,16 +108,16 @@
 
         <Button
             android:id="@+id/btnLogIn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_gravity="center"
             android:layout_marginTop="16dp"
             android:layout_weight="1"
             android:background="#929894"
-            android:text="Log in"
+            android:text="Log In"
             android:textAllCaps="true"
             android:textColor="#FFFFFF"
-            android:textSize="15sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/txtRegisterAcount"
@@ -122,7 +126,7 @@
             android:layout_gravity="left|center"
             android:layout_marginLeft="0dp"
             android:layout_marginTop="16dp"
-            android:text="Nếu chưa có tài khoản Nhấn vào đây"
+            android:text="Nếu chưa có tài khoản nhấn vào đây"
             android:textColor="@android:color/black"
             android:textSize="15sp"
             android:textStyle="italic" />
